--- a/docs/assets/css/custom.css
+++ b/docs/assets/css/custom.css
@@ -175,3 +175,20 @@
 .md-version-dropdown a:hover {
   background-color: var(--md-accent-fg-color--transparent);
 }
+
+
+.md-linkedin-button {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 7px;
+  text-align: center;
+  outline: none;
+  text-decoration: none !important;
+  color: #ffffff !important;
+  width: 200px;
+  height: 32px;
+  border-radius: 16px;
+  background-color: #0A66C2;
+  font-family: "SF Pro Text", Helvetica, sans-serif;
+}
