fix: hide home page title

--- a/docs/assets/css/pages/home/extras.css
+++ b/docs/assets/css/pages/home/extras.css
@@ -15,7 +15,7 @@
 }
 
 /* Hide page title on the landing page */
-.landing-page .md-content__inner > h1:first-child {
+.landing-page .home-page-wrapper > h1:first-child {
   display: none;
 }
 
