--- a/docs/assets/css/components/cellular-prism/styles.css
+++ b/docs/assets/css/components/cellular-prism/styles.css
@@ -1,6 +1,6 @@
 /* Styles for the Cellular Prism Component */
 /* Import shared test scene styles */
-@import url('./test-scene-shared.css');
+@import url('../test-scene-shared.css');
 
 cellular-prism {
   display: block;
