--- a/docs/assets/css/components/color-particle-artifact/styles.css
+++ b/docs/assets/css/components/color-particle-artifact/styles.css
@@ -4,7 +4,7 @@
  */
 
 /* Import shared test scene styles */
-@import url('./test-scene-shared.css');
+@import url('../test-scene-shared.css');
 
 /* Base component container */
 color-particle-artifact {
