--- a/docs/assets/css/components/dreamscape-proto6/styles.css
+++ b/docs/assets/css/components/dreamscape-proto6/styles.css
@@ -1,6 +1,6 @@
 /* Styles for the Interactive Canvas Dreamscape */
 /* Import shared test scene styles */
-@import url('./test-scene-shared.css');
+@import url('../test-scene-shared.css');
 
 dreamscape-proto6 {
   display: block;
