--- a/docs/assets/css/components/ghibli-masterpiece/styles.css
+++ b/docs/assets/css/components/ghibli-masterpiece/styles.css
@@ -1,6 +1,6 @@
 /* Styles for the Ghibli Forest Spirits Component */
 /* Import shared test scene styles */
-@import url('./test-scene-shared.css');
+@import url('../test-scene-shared.css');
 
 /* Component-specific styling */
 ghibli-masterpiece {
